--- a/notebooks/mcstatistics.ipynb
+++ b/notebooks/mcstatistics.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = Path.cwd() / \"../data/mcdonalds-nutrition-facts.pdf\"\n",
-    "df : pd.DataFrame = mc.read_menu(file_path)"
+    "df : pd.DataFrame = mc.read_menu(file_path, output_path=Path.cwd() / \"../data/mcdonalds-burger_facts.csv\")"
    ]
   },
   {
@@ -262,22 +262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'5.1'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.iloc[3]['Serving Size'].strip().split(' ')[0]"
+    "serving_size_mcchicken = float(df.iloc[3]['Serving Size'].strip().split(' ')[0])\n",
+    "serving_size_bigmac = float(df.iloc[16]['Serving Size'].strip().split(' ')[0])\n",
+    "serving_size_mcdouble = float(df.iloc[24]['Serving Size'].strip().split(' ')[0])\n",
+    "\n",
+    "serving_size = np.array([ss.strip().split(' ')[0] for ss in df['Serving Size']]).astype(float)\n",
+    "mean_serving_size = np.mean(serving_size)\n",
+    "\n",
+    "df[\"Serving Size (oz)\"] = serving_size"
    ]
   },
   {
@@ -297,16 +293,7 @@
     }
    ],
    "source": [
-    "calories_burned_per_mile = 100\n",
-    "\n",
     "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "serving_size_mcchicken = float(df.iloc[3]['Serving Size'].strip().split(' ')[0])\n",
-    "serving_size_bigmac = float(df.iloc[16]['Serving Size'].strip().split(' ')[0])\n",
-    "serving_size_mcdouble = float(df.iloc[24]['Serving Size'].strip().split(' ')[0])\n",
-    "\n",
-    "serving_size = np.array([ss.strip().split(' ')[0] for ss in df['Serving Size']]).astype(float)\n",
-    "mean_serving_size = np.mean(serving_size)\n",
     "\n",
     "bins = np.linspace(np.min(serving_size), np.max(serving_size), 20) \n",
     "\n",
@@ -380,6 +367,48 @@
     "plt.xticks(bins)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.2125, 1.25  , 1.2625, 0.6375, 0.65  , 0.7125, 0.7625, 0.7125,\n",
+       "       0.625 , 0.9125, 1.3875, 1.375 , 1.3625, 1.35  , 1.325 , 1.3   ,\n",
+       "       0.9375, 0.9125, 1.2875, 0.4375, 0.5   , 0.5   , 0.5   , 0.7125,\n",
+       "       0.65  , 0.7125, 0.85  , 0.575 , 0.5625, 0.55  , 0.7125, 1.    ,\n",
+       "       1.15  , 0.9125, 1.0125, 1.25  , 1.3125, 1.3   , 1.2625, 0.6375,\n",
+       "       0.65  , 0.7125, 0.7625, 0.7125, 0.625 , 1.3875, 1.375 , 1.3625,\n",
+       "       1.35  , 1.325 , 1.3   , 0.7125, 0.575 , 1.425 , 0.425 , 2.85  ,\n",
+       "       1.1875, 0.5625, 1.175 , 1.3   , 1.2875, 0.2875, 1.    , 0.55  ,\n",
+       "       0.9125, 1.0125, 1.2875, 1.25  , 1.375 , 1.35  , 1.3125, 0.5625,\n",
+       "       1.1625, 1.3   , 0.65  , 1.0625, 0.8875, 0.7125, 0.85  , 0.625 ,\n",
+       "       0.4875, 1.1125, 0.6   , 0.6625, 0.5125, 0.7125, 0.7625, 0.625 ,\n",
+       "       0.8875, 0.85  , 1.1875, 1.85  , 0.5   , 0.6625, 0.6   , 0.25  ,\n",
+       "       0.725 , 1.9125, 1.25  , 0.575 , 0.775 , 0.6875, 0.7375, 0.7125,\n",
+       "       0.7875, 0.675 , 1.2625, 1.2   , 1.925 , 1.8625, 1.1125, 1.1   ,\n",
+       "       0.8   , 0.7375, 0.9   , 0.8375, 0.8125, 0.4875, 0.3375, 0.775 ,\n",
+       "       1.3125, 1.3   , 0.7375, 0.7625, 1.1875, 1.175 , 1.3   , 1.2875,\n",
+       "       0.65  , 0.325 , 0.15  , 0.3375, 0.7375, 0.4875, 0.1625, 0.575 ,\n",
+       "       0.5625, 0.55  , 0.2875, 0.375 ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_weight_food = 2  # lbs\n",
+    "average_weight_food_oz = average_weight_food * 16\n",
+    "oz_per_mile = 8\n",
+    "\n",
+    "normalized_weight = df[\"Serving Size (oz)\"].values / oz_per_mile\n",
+    "normalized_weight "
    ]
   },
   {
