--- a/notebooks/mcstatistics.ipynb
+++ b/notebooks/mcstatistics.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,44 +371,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_weight_food = 2  # lbs\n",
+    "average_weight_food_oz = average_weight_food * 16\n",
+    "oz_per_mile = 6\n",
+    "\n",
+    "normalized_weight = (df[\"Serving Size (oz)\"].values / oz_per_mile).round(1)\n",
+    "df[\"Mileage_taken_off_per_item (Miles)\"] = normalized_weight "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Serving Size</th>\n",
+       "      <th>Calories</th>\n",
+       "      <th>Mileage_taken_off_per_item (Miles)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bacon Clubhouse Burger</td>\n",
+       "      <td>9.7 oz</td>\n",
+       "      <td>740</td>\n",
+       "      <td>1.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bacon Clubhouse Grilled Chicken Sandwich</td>\n",
+       "      <td>10 oz</td>\n",
+       "      <td>610</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bacon Clubhouse Buttermilk Crispy Chicken Sand...</td>\n",
+       "      <td>10.1 oz</td>\n",
+       "      <td>790</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>McChicken ®</td>\n",
+       "      <td>5.1 oz</td>\n",
+       "      <td>370</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buffalo Ranch McChicken</td>\n",
+       "      <td>5.2 oz</td>\n",
+       "      <td>370</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([1.2125, 1.25  , 1.2625, 0.6375, 0.65  , 0.7125, 0.7625, 0.7125,\n",
-       "       0.625 , 0.9125, 1.3875, 1.375 , 1.3625, 1.35  , 1.325 , 1.3   ,\n",
-       "       0.9375, 0.9125, 1.2875, 0.4375, 0.5   , 0.5   , 0.5   , 0.7125,\n",
-       "       0.65  , 0.7125, 0.85  , 0.575 , 0.5625, 0.55  , 0.7125, 1.    ,\n",
-       "       1.15  , 0.9125, 1.0125, 1.25  , 1.3125, 1.3   , 1.2625, 0.6375,\n",
-       "       0.65  , 0.7125, 0.7625, 0.7125, 0.625 , 1.3875, 1.375 , 1.3625,\n",
-       "       1.35  , 1.325 , 1.3   , 0.7125, 0.575 , 1.425 , 0.425 , 2.85  ,\n",
-       "       1.1875, 0.5625, 1.175 , 1.3   , 1.2875, 0.2875, 1.    , 0.55  ,\n",
-       "       0.9125, 1.0125, 1.2875, 1.25  , 1.375 , 1.35  , 1.3125, 0.5625,\n",
-       "       1.1625, 1.3   , 0.65  , 1.0625, 0.8875, 0.7125, 0.85  , 0.625 ,\n",
-       "       0.4875, 1.1125, 0.6   , 0.6625, 0.5125, 0.7125, 0.7625, 0.625 ,\n",
-       "       0.8875, 0.85  , 1.1875, 1.85  , 0.5   , 0.6625, 0.6   , 0.25  ,\n",
-       "       0.725 , 1.9125, 1.25  , 0.575 , 0.775 , 0.6875, 0.7375, 0.7125,\n",
-       "       0.7875, 0.675 , 1.2625, 1.2   , 1.925 , 1.8625, 1.1125, 1.1   ,\n",
-       "       0.8   , 0.7375, 0.9   , 0.8375, 0.8125, 0.4875, 0.3375, 0.775 ,\n",
-       "       1.3125, 1.3   , 0.7375, 0.7625, 1.1875, 1.175 , 1.3   , 1.2875,\n",
-       "       0.65  , 0.325 , 0.15  , 0.3375, 0.7375, 0.4875, 0.1625, 0.575 ,\n",
-       "       0.5625, 0.55  , 0.2875, 0.375 ])"
+       "                                           Item Name Serving Size Calories  \\\n",
+       "0                             Bacon Clubhouse Burger       9.7 oz      740   \n",
+       "1           Bacon Clubhouse Grilled Chicken Sandwich        10 oz      610   \n",
+       "2  Bacon Clubhouse Buttermilk Crispy Chicken Sand...      10.1 oz      790   \n",
+       "3                                        McChicken ®       5.1 oz      370   \n",
+       "4                            Buffalo Ranch McChicken       5.2 oz      370   \n",
+       "\n",
+       "   Mileage_taken_off_per_item (Miles)  \n",
+       "0                                 1.6  \n",
+       "1                                 1.7  \n",
+       "2                                 1.7  \n",
+       "3                                 0.8  \n",
+       "4                                 0.9  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "average_weight_food = 2  # lbs\n",
-    "average_weight_food_oz = average_weight_food * 16\n",
-    "oz_per_mile = 8\n",
-    "\n",
-    "normalized_weight = df[\"Serving Size (oz)\"].values / oz_per_mile\n",
-    "normalized_weight "
+    "df[[\"Item Name\",\"Serving Size\",\"Calories\", \"Mileage_taken_off_per_item (Miles)\"]].head()"
    ]
   },
   {
